# client_server

./: .clang-format  CMakeLists.txt  client.cpp  server.cpp
